--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,21 @@
     padding: 0;
 }
 
-.container {
-    text-align: center;
-    padding: 20px;
-    height: 100vh;
-  }
-
 body {
     background-color: #032b52;
     background-image: linear-gradient(62deg, #032b52 0%, #23172d 100%);
     background-repeat: no-repeat; 
     font-family: 'Orbitron', sans-serif;
-    color: white;       
+    color: white;          
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
 }
 
 .container__titulo {
